cmake_minimum_required(VERSION 3.21)
project(atcoder_dp_contest)

set(CMAKE_CXX_STANDARD 17)

add_executable(atcoder_dp_contest src/_template.cpp)

add_executable(frog1 src/frog1.cpp)
add_executable(frog2 src/frog2.cpp)
add_executable(vacation src/vacation.cpp)
add_executable(knapsack1 src/knapsack1.cpp)
add_executable(knapsack2 src/knapsack2.cpp)
add_executable(lcs src/lcs.cpp)
add_executable(longest_path src/longest_path.cpp)
add_executable(grid1 src/grid1.cpp)
add_executable(coins src/coins.cpp)
add_executable(sushi src/sushi.cpp)
add_executable(stones src/stones.cpp)
add_executable(deque src/deque.cpp)